--- a/src/app/recipies/recipies.component.html
+++ b/src/app/recipies/recipies.component.html
@@ -1,3 +1,12 @@
-<p>
+<!--<p>
   recipies works!
-</p>
+</p>-->
+
+<div class="row">
+  <div class="col-md-5">
+    <app-recipe-list></app-recipe-list>
+  </div>
+  <div class="col-md-7">
+    <app-recipe-detail></app-recipe-detail>
+  </div>
+</div>
