--- a/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/src/app/recipies/recipe-list/recipe-list.component.html
@@ -3,6 +3,9 @@
     <button class="btn btn-success">New Recipe</button>
   </div>
 </div>
+
+<hr>
+
 <div class="row">
   <div class="col-xs-12" *ngFor="let recipe of recipes">
     <a href="#" class="list-group-item clearfix">
@@ -11,9 +14,9 @@
         <p class="list-group-item-text">{{recipe.description}}</p>
       </div>
       <span class="pull-right">
-        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 50px;">
+        <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px;">
       </span>
     </a>
   </div>
 </div>
-<app-recipe-item></app-recipe-item>
+<!--<app-recipe-item></app-recipe-item>-->
