--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,11 @@
   <div class="col-xs-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <p>The list</p>
+    <ul class="list-group" >
+      <a class="list-group-item" syle="cursor: pointer"
+        *ngFor="let ingredient of ingredients">
+        {{ingredient.name}} ({{ingredient.name}})
+      </a>
+    </ul>
   </div>
 </div>
